--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,11 +21,12 @@ steps:
 
 - script: |
     python -m pip install --upgrade pip
-    pip install -r requirements.txt
+    # pip install -r requirements.txt
   displayName: 'Install dependencies'
 
 - script: |
     pip install pytest pytest-azurepipelines
     cd tests/
+    pip install -r requirements.txt
     python test_home_page.py
   displayName: 'pytest'
