--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -21,6 +21,7 @@ steps:
 
 - script: |
     python -m pip install --upgrade pip
+    cd tests/
     pip install -r requirements.txt
   displayName: 'Install dependencies'
 
